--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <meta name='description' content="eldarlrd's portfolio">
-    <meta name='keywords' content='battleship, game'>
+    <meta name='keywords' content='portfolio'>
     <meta name='author' content='Eldar Pashazade'>
-    <meta name='theme-color' content='#60a5fa'>
+    <meta name='theme-color' content='#fff'>
     <link rel='manifest' type='application/manifest+json' href='site.webmanifest'>
     <link rel='icon' type='image/png' sizes='512x512' href='favicon.png'>
     <title>Portfolio | eldarlrd</title>
