init: restructure & remove stylus

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name='theme-color' content='#fff'>
     <link rel='manifest' type='application/manifest+json' href='site.webmanifest'>
     <link rel='icon' type='image/png' sizes='512x512' href='favicon.png'>
-    <title>Portfolio | eldarlrd</title>
+    <title>💼 Portfolio | eldarlrd</title>
   </head>
 
   <body>
