--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name='author' content='Eldar Pashazade'>
     <meta name='theme-color' content='#fff'>
     <link rel='manifest' type='application/manifest+json' href='site.webmanifest'>
-    <link rel='icon' type='image/png' sizes='460x460' href='https://avatars.githubusercontent.com/u/95304986'>
+    <link rel='icon' type='image/png' sizes='460x460' href='https://github.com/eldarlrd.png'>
     <title>💼 Portfolio | eldarlrd</title>
   </head>
 
