design(header): font cdn

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name='author' content='Eldar Pashazade'>
     <meta name='theme-color' content='#fff'>
     <link rel='manifest' type='application/manifest+json' href='site.webmanifest'>
+    <link rel='stylesheet' type='text/css' href='https://cdn.jsdelivr.net/npm/@fontsource/geist-sans/latin.css'>
     <link rel='icon' type='image/png' sizes='460x460' href='https://github.com/eldarlrd.png'>
     <title>💼 Portfolio | eldarlrd</title>
   </head>
