--- a/index.html
+++ b/index.html
@@ -10,11 +10,9 @@
     <link rel='manifest' type='application/manifest+json' href='site.webmanifest'>
     <link rel='stylesheet' type='text/css' href='https://cdn.jsdelivr.net/npm/@fontsource/geist-sans/latin.css'>
     <link rel='icon' type='image/png' sizes='460x460' href='https://github.com/eldarlrd.png'>
+    <script type='module' src='src/main.ts' defer></script>
     <title>💼 Portfolio | eldarlrd</title>
   </head>
 
-  <body>
-    <div id='app'></div>
-    <script type='module' src='src/main.ts'></script>
-  </body>
+  <body></body>
 </html>
