--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang='en'>
+<html lang='en' style='scroll-behavior:smooth'>
   <head>
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
@@ -10,6 +10,8 @@
     <link rel='manifest' type='application/manifest+json' href='site.webmanifest'>
     <link rel='stylesheet' type='text/css' href='https://cdn.jsdelivr.net/npm/@fontsource/geist-sans/latin.css'>
     <link rel='icon' type='image/png' sizes='460x460' href='https://github.com/eldarlrd.png'>
+    <script type='text/javascript' src='https://kit.fontawesome.com/0db9b2eb32.js'
+      crossorigin='anonymous' defer></script>
     <script type='module' src='src/main.ts' defer></script>
     <title>💼 Portfolio | eldarlrd</title>
   </head>
