--- a/index.html
+++ b/index.html
@@ -8,8 +8,17 @@
     <meta name='author' content='Eldar Pashazade'>
     <meta name='theme-color' content='#fff'>
     <link rel='manifest' type='application/manifest+json' href='site.webmanifest'>
-    <link rel='stylesheet' type='text/css' href='https://cdn.jsdelivr.net/npm/@fontsource/geist-sans/latin.css'>
-    <link rel='icon' type='image/png' sizes='460x460' href='https://github.com/eldarlrd.png'>
+    <link rel='preconnect' type='text/html'
+      href='https://cdn.jsdelivr.net' crossorigin='anonymous'>
+    <link rel='preconnect' type='text/xml'
+      href='https://kit.fontawesome.com' crossorigin='anonymous'>
+    <link as='image' rel='preload' type='image/png'
+      href='https://github.com/eldarlrd.png' fetchpriority='high'>
+    <link as='style' rel='preload' type='text/css'
+      href='https://cdn.jsdelivr.net/npm/@fontsource/geist-sans/latin.css'
+      onload="this.onload=null;this.rel='stylesheet'">
+    <link rel='icon' type='image/png'
+      sizes='460x460' href='https://github.com/eldarlrd.png'>
     <script type='text/javascript' src='https://kit.fontawesome.com/0db9b2eb32.js'
       crossorigin='anonymous' defer></script>
     <script type='module' src='src/main.ts' defer></script>
