feat(skills): grid finalized

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     <link as='style' rel='preload' type='text/css'
       href='https://cdn.jsdelivr.net/npm/@fontsource/geist-sans/latin.css'
       onload="this.onload=null;this.rel='stylesheet'">
+    <link as='style' rel='preload' type='text/css'
+      href='https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css'
+      onload="this.onload=null;this.rel='stylesheet'">
     <link rel='icon' type='image/png'
       sizes='460x460' href='https://github.com/eldarlrd.png'>
     <script type='text/javascript' src='https://kit.fontawesome.com/0db9b2eb32.js'
