feat(projects): structure

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name='description' content="eldarlrd's portfolio">
     <meta name='keywords' content='portfolio'>
     <meta name='author' content='Eldar Pashazade'>
-    <meta name='theme-color' content='#fff'>
+    <meta name='theme-color' content='#1e293b'>
     <link rel='manifest' type='application/manifest+json' href='site.webmanifest'>
     <link rel='preconnect' type='text/html'
       href='https://cdn.jsdelivr.net' crossorigin='anonymous'>
