design: focus highlight

--- a/index.html
+++ b/index.html
@@ -14,9 +14,17 @@
       href='https://kit.fontawesome.com' crossorigin='anonymous'>
     <link as='image' rel='preload' type='image/png'
       href='https://github.com/eldarlrd.png' fetchpriority='high'>
+
     <link as='style' rel='preload' type='text/css'
-      href='https://cdn.jsdelivr.net/npm/@fontsource/geist-sans/latin.css'
+      href='https://cdn.jsdelivr.net/npm/@fontsource/geist-sans/latin-400.css'
       onload="this.onload=null;this.rel='stylesheet'">
+    <link as='style' rel='preload' type='text/css'
+      href='https://cdn.jsdelivr.net/npm/@fontsource/geist-sans/latin-500.css'
+      onload="this.onload=null;this.rel='stylesheet'">
+    <link as='style' rel='preload' type='text/css'
+      href='https://cdn.jsdelivr.net/npm/@fontsource/geist-sans/latin-600.css'
+      onload="this.onload=null;this.rel='stylesheet'">
+
     <link as='style' rel='preload' type='text/css'
       href='https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css'
       onload="this.onload=null;this.rel='stylesheet'">
