--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <meta name='keywords' content='portfolio'>
     <meta name='author' content='Eldar Pashazade'>
     <meta name='theme-color' content='#1e293b'>
+
+    <meta property='og:type' content='website'>
+    <meta property='og:title' content='💼 Portfolio | eldarlrd'>
+    <meta property='og:description' content="eldarlrd's portfolio">
+    <meta property='og:url' content='https://eldarlrd.github.io/portfolio'>
+    <meta property='og:image'
+      content='https://repository-images.githubusercontent.com/641326948/909665e9-b944-4ef9-b2f5-f9c213fea159'>
+    <meta property='og:image:type' content='image/png'>
+    <meta property='og:image:width' content='1280'>
+    <meta property='og:image:height' content='640'>
+
     <link rel='manifest' type='application/manifest+json' href='site.webmanifest'>
     <link rel='preconnect' type='text/html'
       href='https://cdn.jsdelivr.net' crossorigin='anonymous'>
