--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <meta name='theme-color' content='#1e293b'>
 
     <meta property='og:type' content='website'>
-    <meta property='og:title' content='💼 Portfolio | eldarlrd'>
+    <meta content='💼 Portfolio • eldarlrd' property='og:title'>
     <meta property='og:description' content="eldarlrd's portfolio">
-    <meta property='og:url' content='https://eldarlrd.github.io/portfolio'>
+    <meta content='https://eldarlrd.is-a.dev/portfolio' property='og:url'>
     <meta property='og:image'
       content='https://repository-images.githubusercontent.com/641326948/cb159042-7674-4081-a4f2-7862bc0cf47f'>
     <meta property='og:image:type' content='image/png'>
@@ -44,7 +44,7 @@
     <script type='text/javascript' src='https://kit.fontawesome.com/0db9b2eb32.js'
       crossorigin='anonymous' defer></script>
     <script type='module' src='src/main.ts' defer></script>
-    <title>💼 Portfolio | eldarlrd</title>
+    <title>💼 Portfolio • eldarlrd</title>
   </head>
 
   <body></body>
