--- a/index.html
+++ b/index.html
@@ -8,32 +8,26 @@
     <meta name='author' content='Eldar Pashazade'>
     <meta name='theme-color' content='#1e293b'>
 
-    <meta property='og:type' content='website'>
     <meta content='💼 Portfolio • eldarlrd' property='og:title'>
     <meta property='og:description' content="eldarlrd's portfolio">
     <meta content='https://eldarlrd.is-a.dev/portfolio' property='og:url'>
     <meta property='og:image'
       content='https://repository-images.githubusercontent.com/641326948/cb159042-7674-4081-a4f2-7862bc0cf47f'>
-    <meta property='og:image:type' content='image/png'>
-    <meta property='og:image:width' content='1280'>
-    <meta property='og:image:height' content='640'>
 
     <link rel='manifest' type='application/manifest+json' href='site.webmanifest'>
+
+    <link href='https://fonts.googleapis.com' rel='preconnect' type='text/css'>
+    <link crossorigin href='https://fonts.gstatic.com'
+      rel='preconnect' type='font/woff2'>
     <link rel='preconnect' type='text/html'
-      href='https://cdn.jsdelivr.net' crossorigin='anonymous'>
+      crossorigin href='https://cdn.jsdelivr.net'>
     <link rel='preconnect' type='text/xml'
-      href='https://kit.fontawesome.com' crossorigin='anonymous'>
+      crossorigin href='https://kit.fontawesome.com'>
     <link as='image' rel='preload' type='image/png'
       href='https://github.com/eldarlrd.png' fetchpriority='high'>
 
     <link as='style' rel='preload' type='text/css'
-      href='https://cdn.jsdelivr.net/npm/@fontsource/geist-sans/latin-400.css'
-      onload="this.onload=null;this.rel='stylesheet'">
-    <link as='style' rel='preload' type='text/css'
-      href='https://cdn.jsdelivr.net/npm/@fontsource/geist-sans/latin-500.css'
-      onload="this.onload=null;this.rel='stylesheet'">
-    <link as='style' rel='preload' type='text/css'
-      href='https://cdn.jsdelivr.net/npm/@fontsource/geist-sans/latin-600.css'
+      href='https://fonts.googleapis.com/css2?family=Geist:wght@400;500;600&display=swap'
       onload="this.onload=null;this.rel='stylesheet'">
 
     <link as='style' rel='preload' type='text/css'
@@ -42,7 +36,7 @@
     <link rel='icon' type='image/png'
       sizes='460x460' href='https://github.com/eldarlrd.png'>
     <script type='text/javascript' src='https://kit.fontawesome.com/0db9b2eb32.js'
-      crossorigin='anonymous' defer></script>
+      crossorigin defer></script>
     <script type='module' src='src/main.ts' defer></script>
     <title>💼 Portfolio • eldarlrd</title>
   </head>
